Simplify last packet extraction
Use nonullPacketChain(), which guarantees a non-null return -- thus
eliminating a nullness warning. Then use List.getLast() to access
the last element.

Change-Id: I65c22c572855c095d2dc6040903f3c44ca76e824
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>